--- a/frontend/style/index/main.css
+++ b/frontend/style/index/main.css
@@ -1,18 +1,17 @@
 #info {
-  max-width: 80%;
+  max-width: 90%;
 
   margin: 2rem auto;
-  text-align: center;
 
   padding: 0 1rem;
 }
 
 .important-card {
   background-color: #641226;
-  padding: 1.5rem 3rem;
+  padding: 2.5rem 2rem;
 
   & h2 {
-    margin-bottom: 0.625rem;
+    margin-bottom: 1rem;
     font-size: 32px;
     font-weight: 500;
 
@@ -25,8 +24,7 @@
 }
 
 #card-text {
-  max-width: 80%;
-  margin: auto 0 auto 1.875rem;
+  max-width: 90%;
 
   font-size: 1.5rem;
 }
@@ -37,17 +35,12 @@
 }
 
 #motivation {
-  max-width: 100%;
+  max-width: 90%;
 
   text-align: center;
   margin: 2rem auto;
 
-  padding: 2rem 2rem;
-}
-
-#slogan {
-  display: flex;
-  border: 1px solid red;
+  padding-block: 5rem;
 }
 
 @media (min-width: 992px) {
