--- a/frontend/style/about/main.css
+++ b/frontend/style/about/main.css
@@ -1,12 +1,12 @@
 #about {
-  max-width: 1300px;
-  margin: 3.125rem 4rem;
+  max-width: 90%;
+  margin-inline: 2rem;
 
   & h1 {
-    margin: 3.625rem 0 2.125rem;
+    margin: 4rem 0 2rem;
   }
 
   & p {
-    margin-bottom: 3.5rem;
+    margin-bottom: 4rem;
   }
 }
