Ajustando responsividade (mobile) da página Contato

--- a/frontend/style/contact/main.css
+++ b/frontend/style/contact/main.css
@@ -1,23 +1,28 @@
 #contact-info {
-  max-width: 1300px;
-  margin: 3.125rem 4rem;
+  max-width: 90%;
+  margin: 4rem 2rem;
 
   & p {
     margin-top: 3.5rem;
   }
 }
 
-#contact-main {
-  height: 100%;
+@media(min-width: 992px){
+  #footer-contact {
+    position: fixed;
+    bottom: 0;
+  }
+
+  #contact-main {
+    height: 100%;
+  }
+
+  #contact-body {
+    height: 100vh;
+  }
+
+  #footer-contact {
+    width: 100vw;
+  }
 }
 
-#contact-body {
-  height: 100vh;
-}
-
-#footer-contact {
-  position: fixed;
-  bottom: 0;
-
-  width: 100vw;
-}
