Adicionando responsividade (mobile) a pagina de FAQ

--- a/frontend/style/faq/main.css
+++ b/frontend/style/faq/main.css
@@ -1,9 +1,14 @@
 #questions {
-  margin: 4rem;
+  max-width: 90%;
+  margin: 0 auto;
+
+  padding: 4rem 1rem;
 }
 
 .question-card {
-  padding: 1.875rem;
+  max-width: 100%;
+
+  padding: 1.5rem;
   background-color: #641226;
 
   color: #f1f1f1;
@@ -14,6 +19,6 @@
 
   & p {
     color: #f1f1f1;
-    padding: 0.5rem;
+    padding-top: 1rem;
   }
 }
