--- a/frontend/style/utility.css
+++ b/frontend/style/utility.css
@@ -155,14 +155,17 @@
 }
 
 #nav-footer {
+  max-width: 100%;
   flex-direction: column;
-  align-items: center;
-  padding: 10px;
+
+  & nav {
+    justify-content: space-between;
+    margin-inline: 2rem;
+  }
 
   & ul {
     flex-direction: column;
-
-    align-items: center;
+    align-items: start;
 
     list-style: none;
     gap: 2rem;
@@ -176,11 +179,10 @@
 }
 
 #logo-footer {
-  max-width: 200px;
-  max-height: 200px;
-  padding: 1rem;
+  max-width: 90%;
+  margin: 2rem;
 
-  border-bottom: 1px solid #da345d;
+  border-bottom: 1px solid #000000;
 }
 
 #rights {
