--- a/frontend/style/utility.css
+++ b/frontend/style/utility.css
@@ -83,12 +83,10 @@
 }
 
 .navigation {
-  width: 90vw;
-  margin: 1.5rem;
+  width: 90%;
+  margin: auto;
   
   border-radius: 1.5rem;
-  
-  gap: 1rem;
   
   position: sticky;
   top: 2rem;
