--- a/frontend/style/utility.css
+++ b/frontend/style/utility.css
@@ -178,9 +178,11 @@
 
 #logo-footer {
   max-width: 90%;
-  margin: 2rem;
+  margin: auto;
+}
 
-  border-bottom: 1px solid #000000;
+#menu-footer{
+  border-top: 1px solid #000000;
 }
 
 #rights {
