--- a/frontend/style/contact/main.css
+++ b/frontend/style/contact/main.css
@@ -1,13 +1,13 @@
 #contact-info {
   max-width: 90%;
-  margin: 4rem 2rem;
+  margin: 4rem auto;
 
   & p {
     margin-top: 3.5rem;
   }
 }
 
-@media(min-width: 992px){
+@media (min-width: 992px) {
   #footer-contact {
     position: fixed;
     bottom: 0;
@@ -25,4 +25,3 @@
     width: 100vw;
   }
 }
-
