--- a/frontend/style/index/main.css
+++ b/frontend/style/index/main.css
@@ -1,7 +1,7 @@
 #info {
   max-width: 90%;
 
-  margin: 4rem 2rem;
+  margin: 4rem auto;
 }
 
 #title {
@@ -53,7 +53,8 @@
     flex-direction: row-reverse;
   }
 
-  #title-first-card, #title-second-card{
+  #title-first-card,
+  #title-second-card {
     text-align: right;
   }
 }
