--- a/frontend/style/index/main.css
+++ b/frontend/style/index/main.css
@@ -1,7 +1,7 @@
 #info {
   max-width: 90%;
 
-  margin: 4rem auto;
+  margin: 6rem auto 4rem auto;
 }
 
 #title {
@@ -41,6 +41,18 @@
 
   text-align: center;
   margin: 6rem auto;
+}
+
+#menu-footer nav ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 8px;
+
+  svg {
+    width: 20px;
+    height: 20px;
+  }
 }
 
 @media (min-width: 992px) {
